Cleaned up the NumericSerde class